update spring-cloud to 2024.0.2